<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|fill_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30dip"
    android:paddingTop="15dip" >
   
    <TextView
        android:id="@+id/prompt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search" />
        
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal|fill_horizontal"
    	android:orientation="horizontal">
        
        <EditText
            android:id="@+id/id_header"
            style="@style/ListFragmentItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <EditText
            android:id="@+id/alias_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/search_alias"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/search_datetime"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/search_location"
            android:maxLines="1"
            android:singleLine="true" />
    
        </LinearLayout>

</LinearLayout>
